--- a/src/main/webapp/WEB-INF/views/seekers/show.jspx
+++ b/src/main/webapp/WEB-INF/views/seekers/show.jspx
@@ -2,9 +2,9 @@
 <div xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:page="urn:jsptagdir:/WEB-INF/tags/form" version="2.0">
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
-    <page:show id="ps_com_jclarity_had_one_dismissal_domain_Seeker" object="${seeker}" path="/seekers" z="LAu6RgFQsKyEsNX6H4md6WpXfRk=">
-        <field:display field="firstName" id="s_com_jclarity_had_one_dismissal_domain_Seeker_firstName" object="${seeker}" z="0p+7ckln4z5BXUHyNqP3MPIQLnc="/>
-        <field:display field="surName" id="s_com_jclarity_had_one_dismissal_domain_Seeker_surName" object="${seeker}" z="AEuJiPw+ijx0nmUmoJZL6c4iRAc="/>
-        <field:display field="yearsExperience" id="s_com_jclarity_had_one_dismissal_domain_Seeker_yearsExperience" object="${seeker}" z="vQSheBz05/RfHk2ZxNvnFO2F0eo="/>
+    <page:show id="ps_com_jclarity_had_one_dismissal_domain_Applicant" object="${applicant}" path="/seekers" z="81jRiDYuHjpx/ZdpUks5fB4BqWU=">
+        <field:display field="firstName" id="s_com_jclarity_had_one_dismissal_domain_Applicant_firstName" object="${applicant}" z="lQ1kXhVkIVGxZIjjmNiUIh7++0s="/>
+        <field:display field="surName" id="s_com_jclarity_had_one_dismissal_domain_Applicant_surName" object="${applicant}" z="pnJzNJJl4N6X+6g3F/sXM9dROBo="/>
+        <field:display field="yearsExperience" id="s_com_jclarity_had_one_dismissal_domain_Applicant_yearsExperience" object="${applicant}" z="A//A/B0fpzoi3VgQEEnGULMwNfQ="/>
     </page:show>
 </div>
