--- a/src/main/webapp/WEB-INF/views/applicant/list.jspx
+++ b/src/main/webapp/WEB-INF/views/applicant/list.jspx
@@ -3,7 +3,7 @@
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
     <page:list id="pl_com_jclarity_had_one_dismissal_domain_Applicant" items="${applicants}" z="ZDpSwQJONWn4n4qIIJx4pCIANnw=">
-        <table:table data="${applicants}" id="l_com_jclarity_had_one_dismissal_domain_Applicant" path="/seekers" z="ScMaVOvoKOBuOfPQM++B7TKYLaI=">
+        <table:table data="${applicants}" id="l_com_jclarity_had_one_dismissal_domain_Applicant" path="/applicant" z="9h9iGfqIeQcldOZ3MCgk8FINCCY=">
             <table:column id="c_com_jclarity_had_one_dismissal_domain_Applicant_firstName" property="firstName" z="uXLDHyOJJ6hRjPa92u6jRn72PTs="/>
             <table:column id="c_com_jclarity_had_one_dismissal_domain_Applicant_surName" property="surName" z="eDFteVt8Dn7P8kIjleGaaSqubw4="/>
             <table:column id="c_com_jclarity_had_one_dismissal_domain_Applicant_yearsExperience" property="yearsExperience" z="3mwEkQNecXHSjVsosKz8nCLBS20="/>
