--- a/src/main/webapp/WEB-INF/views/applicant/show.jspx
+++ b/src/main/webapp/WEB-INF/views/applicant/show.jspx
@@ -2,7 +2,7 @@
 <div xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:page="urn:jsptagdir:/WEB-INF/tags/form" version="2.0">
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
-    <page:show id="ps_com_jclarity_had_one_dismissal_domain_Applicant" object="${applicant}" path="/seekers" z="81jRiDYuHjpx/ZdpUks5fB4BqWU=">
+    <page:show id="ps_com_jclarity_had_one_dismissal_domain_Applicant" object="${applicant}" path="/applicant" z="Rt3qrDqIgOnnKPPE8AQxh7514kI=">
         <field:display field="firstName" id="s_com_jclarity_had_one_dismissal_domain_Applicant_firstName" object="${applicant}" z="lQ1kXhVkIVGxZIjjmNiUIh7++0s="/>
         <field:display field="surName" id="s_com_jclarity_had_one_dismissal_domain_Applicant_surName" object="${applicant}" z="pnJzNJJl4N6X+6g3F/sXM9dROBo="/>
         <field:display field="yearsExperience" id="s_com_jclarity_had_one_dismissal_domain_Applicant_yearsExperience" object="${applicant}" z="A//A/B0fpzoi3VgQEEnGULMwNfQ="/>
