--- a/src/main/webapp/WEB-INF/views/applicant/update.jspx
+++ b/src/main/webapp/WEB-INF/views/applicant/update.jspx
@@ -2,9 +2,9 @@
 <div xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" xmlns:form="urn:jsptagdir:/WEB-INF/tags/form" xmlns:jsp="http://java.sun.com/JSP/Page" version="2.0">
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
-    <form:update id="fu_com_jclarity_had_one_dismissal_domain_Applicant" modelAttribute="applicant" path="/seekers" versionField="Version" z="W2Wgoffud1TwvcYiBoYLlODk2so=">
-        <field:input field="firstName" id="c_com_jclarity_had_one_dismissal_domain_Applicant_firstName" min="10" required="true" z="tETNTiOfn99ibMbsov2rMepVjWM="/>
-        <field:input field="surName" id="c_com_jclarity_had_one_dismissal_domain_Applicant_surName" min="10" required="true" z="CW3A9h+y7EDYUtPnjtWTaG0N/og="/>
+    <form:update id="fu_com_jclarity_had_one_dismissal_domain_Applicant" modelAttribute="applicant" path="/applicant" versionField="Version" z="5AcEcAOX0MTFO5HlHST6q8XE1HU=">
+        <field:input field="firstName" id="c_com_jclarity_had_one_dismissal_domain_Applicant_firstName" min="2" required="true" z="ygVV5pOaywiHaV2xt42dQ5mkygg="/>
+        <field:input field="surName" id="c_com_jclarity_had_one_dismissal_domain_Applicant_surName" min="2" required="true" z="ey8GK6AbvviJV0E55g49UfiB/o4="/>
         <field:input field="yearsExperience" id="c_com_jclarity_had_one_dismissal_domain_Applicant_yearsExperience" z="XfSz5bgFPuGafuDqo1LXJJ+9EDg="/>
     </form:update>
 </div>
