--- a/src/main/webapp/WEB-INF/views/applicant/create.jspx
+++ b/src/main/webapp/WEB-INF/views/applicant/create.jspx
@@ -3,9 +3,9 @@
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
     <form:create id="fc_com_jclarity_had_one_dismissal_domain_Applicant" modelAttribute="applicant" path="/applicant" render="${empty dependencies}" z="wGZyDgcfK5r/+qLdYGvI/2Y7/K0=">
-        <field:input field="firstName" id="c_com_jclarity_had_one_dismissal_domain_Applicant_firstName" min="2" required="true" z="ygVV5pOaywiHaV2xt42dQ5mkygg="/>
-        <field:input field="surName" id="c_com_jclarity_had_one_dismissal_domain_Applicant_surName" min="2" required="true" z="ey8GK6AbvviJV0E55g49UfiB/o4="/>
         <field:input field="yearsExperience" id="c_com_jclarity_had_one_dismissal_domain_Applicant_yearsExperience" z="XfSz5bgFPuGafuDqo1LXJJ+9EDg="/>
+        <field:input field="surname" id="c_com_jclarity_had_one_dismissal_domain_Applicant_surname" min="2" required="true" z="HM8XDi73ypzTH0c+WIB7UZKp2cM="/>
+        <field:input field="foreame" id="c_com_jclarity_had_one_dismissal_domain_Applicant_foreame" min="2" required="true" z="G9Sxn8HMgWwPrQ4ZdbC3bMATVlU="/>
     </form:create>
     <form:dependency dependencies="${dependencies}" id="d_com_jclarity_had_one_dismissal_domain_Applicant" render="${not empty dependencies}" z="mt51H0IVqxBzAMnzEFww0V2yEAM="/>
 </div>
