--- a/src/main/webapp/WEB-INF/views/applicant/list.jspx
+++ b/src/main/webapp/WEB-INF/views/applicant/list.jspx
@@ -6,7 +6,7 @@
         <table:table data="${applicants}" id="l_com_jclarity_had_one_dismissal_domain_Applicant" path="/applicant" z="9h9iGfqIeQcldOZ3MCgk8FINCCY=">
             <table:column id="c_com_jclarity_had_one_dismissal_domain_Applicant_yearsExperience" property="yearsExperience" z="3mwEkQNecXHSjVsosKz8nCLBS20="/>
             <table:column id="c_com_jclarity_had_one_dismissal_domain_Applicant_surname" property="surname" z="m8x+k/0y1Gbvtbc+1qBE+OoPNOM="/>
-            <table:column id="c_com_jclarity_had_one_dismissal_domain_Applicant_foreame" property="foreame" z="Q7vBym2FGQY56+TsgPbGFPldjzc="/>
+            <table:column id="c_com_jclarity_had_one_dismissal_domain_Applicant_forename" property="forename" z="NvZGuPfHev4mz4vp1Y/f1S2JtN8="/>
         </table:table>
     </page:list>
 </div>
