--- a/src/main/webapp/WEB-INF/views/search/results.jspx
+++ b/src/main/webapp/WEB-INF/views/search/results.jspx
@@ -14,7 +14,7 @@
     <c:forEach items="${results}" var="listing" varStatus="count">
         <tr>
             <td>${listing.title}</td>
-            <td>&pound;${listing.salaryLowerBound} - &pound;${listing.salaryUpperBound}</td>
+            <td>£${listing.salaryLowerBound} - £${listing.salaryUpperBound}</td>
         </tr>
     </c:forEach>
     </table>
