--- a/had_one_dismissal/src/main/webapp/WEB-INF/views/menu.jspx
+++ b/had_one_dismissal/src/main/webapp/WEB-INF/views/menu.jspx
@@ -26,6 +26,7 @@
         <menu:category id="c_controller" z="nj8Dm3hojIyIEyPkwE1UMDIs+K8=">
             <menu:item id="i_controller__populateindex_id" messageCode="global_generic" url="/populate/index" z="StiXN7QxCnrr1Qgb+8+zBSWG0y8="/>
             <menu:item id="i_controller__searchindex_id" messageCode="global_generic" url="/search/index" z="Rr2P0bqq8h2TImrqyyTAYCJ8lLY="/>
+            <menu:item id="i_controller__companyandjobindex_id" messageCode="global_generic" url="/companyandjob/index" z="tMA5+LkKJ8qj2ylwsOiANVMU2yY="/>
         </menu:category>
     </menu:menu>
 </div>
